# falldown_ai_inference

./: CMakeLists.txt  README.md
RE/: README.md  settings.gradle.kts
RE/app/: build.gradle.kts
RE/app/src/androidTest/java/com/example/re/: ExampleInstrumentedTest.kt
RE/app/src/main/: AndroidManifest.xml
RE/app/src/main/java/com/example/re/: AppConfig.kt  FallEvent.kt  FallEventService.kt  HttpFallEventService.kt  MainActivity.kt  MockFallEventService.kt
RE/app/src/main/res/layout/: activity_main.xml  item_fall_event.xml
RE/app/src/main/res/values/: strings.xml  themes.xml
RE/app/src/main/res/values-night/: themes.xml
RE/app/src/test/java/com/example/re/: ExampleUnitTest.kt
RE/gradle/: libs.versions.toml
RE/gradle/wrapper/: gradle-wrapper.properties
data/: auto_evidence_service.py
include/: ai_inference.h  fdd_ipc.h  vi_vo.h
legacy/split_sources/: ai_base.cc  ai_base.h  falldown_detect.cc  falldown_detect.h  utils.cc
linux_notify/: Makefile  README.md  falldown_notify_client.cpp
src/: ai_inference.cc  falldown_ai_event.cc  falldown_split_launcher.cc  falldown_video_display.cc  fdd_ipc.cc  main.cc
tools/: fall_event_server.py  run_fall_event_server.bat
tools/evidence_sync/: README.md  auto_evidence_service.py
tools/image_packaging/: README.md  install_to_k230_image.sh
tools/onnx_test/: README.md  eval_onnx_windows.py  requirements.txt
tools/video_prepare/: prepare_video_frames.py
